--- a/views/newAttraction.ejs
+++ b/views/newAttraction.ejs
@@ -3,6 +3,69 @@
   <!-- Head section -->
   <%- include('../views/partials/head') %>
   <body>
-    <h1>New Attraction</h1>
+    <h1 class="text-center">Add New Attraction</h1>
+    <div class="container">
+      <form action="/attractions" method="post" class="row g-3">
+        <label for="name" class="form-label"
+          ><strong>Attraction Name</strong></label
+        >
+        <input
+          type="text"
+          name="name"
+          id="name"
+          class="form-control"
+          placeholder="The MoMA"
+        />
+        <div class="col-md-4">
+          <label for="address" class="form-label"
+            ><strong>Street Address</strong></label
+          >
+          <input
+            type="text"
+            name="address.street"
+            id="address"
+            class="form-control"
+            placeholder="11 W 53rd St"
+          />
+        </div>
+        <div class="col-md-4">
+          <label for="address" class="form-label"> <strong>City</strong></label>
+          <input
+            type="text"
+            name="address.city"
+            id="address"
+            class="form-control"
+            placeholder="New York"
+          />
+        </div>
+        <div class="col-md-4">
+          <label for="address" class="form-label"><strong>State</strong></label>
+          <input
+            type="text"
+            name="address.state"
+            id="address"
+            class="form-control"
+            placeholder="NY"
+          />
+        </div>
+        <label for="image" class="form-label"
+          ><strong>Attraction Image</strong></label
+        >
+        <input type="text" name="image" id="image" class="form-control" />
+        <label for="description" class="form-label"
+          ><strong>Attraction Description</strong></label
+        >
+        <textarea
+          name="description"
+          id="description"
+          cols="30"
+          rows="10"
+          class="form-control"
+        >
+Attraction description.</textarea
+        >
+        <button class="btn btn-success">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
