added navbar partial and put navbar on pages

--- a/views/editAttraction.ejs
+++ b/views/editAttraction.ejs
@@ -3,6 +3,8 @@
   <!-- Head section -->
   <%- include('../views/partials/head') %>
   <body>
+    <!-- Navbar section -->
+    <%- include('../views/partials/navbar') %>
     <h1>Edit Attraction</h1>
   </body>
 </html>
