--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,6 +3,8 @@
   <!-- Head section -->
   <%- include('../views/partials/head') %>
   <body>
+    <!-- Navbar section -->
+    <%- include('../views/partials/navbar') %>
     <h1>This is the Homepage for the attractions</h1>
   </body>
 </html>
