--- a/views/newAttraction.ejs
+++ b/views/newAttraction.ejs
@@ -3,6 +3,8 @@
   <!-- Head section -->
   <%- include('../views/partials/head') %>
   <body>
+    <!-- Navbar section -->
+    <%- include('../views/partials/navbar') %>
     <h1 class="text-center">Add New Attraction</h1>
     <div class="container">
       <form action="/attractions" method="post" class="row g-3">
