created footer.ejs and added footer to pages

--- a/views/attraction.ejs
+++ b/views/attraction.ejs
@@ -6,5 +6,7 @@
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
     <h1>One Attraction</h1>
+    <!-- footer section -->
+    <%- include('../views/partials/footer') %>
   </body>
 </html>
