--- a/views/newAttraction.ejs
+++ b/views/newAttraction.ejs
@@ -69,5 +69,7 @@ Attraction description.</textarea
         <button class="btn btn-success">Submit</button>
       </form>
     </div>
+    <!-- footer section -->
+    <%- include('../views/partials/footer') %>
   </body>
 </html>
