--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,5 +6,7 @@
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
     <h1>All Attractions</h1>
+    <!-- footer section -->
+    <%- include('../views/partials/footer') %>
   </body>
 </html>
