--- a/views/attraction.ejs
+++ b/views/attraction.ejs
@@ -5,7 +5,37 @@
   <body>
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
-    <h1>One Attraction</h1>
+    <div class="p-3 mb-2">
+      <h1 class="text-center"><%= Attraction.name %></h1>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-2">
+            <p><strong>Call:</strong> <%= Attraction.number %></p>
+          </div>
+          <div class="col-10">
+            <p>
+              <strong>Visit Us:</strong> <%= Attraction.address.street %>, <%=
+              Attraction.address.city %>, <%= Attraction.address.state %>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="col-sm-12">
+          <img src="<%= Attraction.image%>" alt="<%= Attraction.name%>" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mt-4">
+          <h3><%= Attraction.name%> Description</h3>
+          <hr />
+          <p><%= Attraction.description %></p>
+        </div>
+      </div>
+    </div>
+
     <!-- footer section -->
     <%- include('../views/partials/footer') %>
   </body>
