--- a/views/attraction.ejs
+++ b/views/attraction.ejs
@@ -9,9 +9,6 @@
       <h1 class="text-center"><%= Attraction.name %></h1>
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-2">
-            <p><strong>Call:</strong> <%= Attraction.number %></p>
-          </div>
           <div class="col-10">
             <p>
               <strong>Visit Us:</strong> <%= Attraction.address.street %>, <%=
@@ -28,10 +25,15 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-8 mt-4">
+        <div class="col-md-8 my-4">
           <h3><%= Attraction.name%> Description</h3>
           <hr />
           <p><%= Attraction.description %></p>
+          <a href="/attractions/<%= Attraction._id %>/edit">
+            <button class="btn btn-primary">
+              Edit <%= Attraction.name%>
+            </button></a
+          >
         </div>
       </div>
     </div>
