added css to attraction image to change width

--- a/views/attraction.ejs
+++ b/views/attraction.ejs
@@ -19,7 +19,11 @@
       </div>
       <div class="container">
         <div class="col-sm-12">
-          <img src="<%= Attraction.image%>" alt="<%= Attraction.name%>" />
+          <img
+            src="<%= Attraction.image%>"
+            alt="<%= Attraction.name%>"
+            class="attraction-image"
+          />
         </div>
       </div>
     </div>
