added title tag to pages and created register form for new users

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- Head section -->
-  <%- include('../views/partials/head') %>
+  <%- include('../views/partials/head', { page: 'Explore NYC Attractions' } ) %>
   <body>
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
