--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- Head section -->
-  <%- include('../views/partials/head') %>
+  <%- include('../views/partials/head', { page: 'Explore All NYC Attractions' })
+  %>
   <body>
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
