--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- Head section -->
-  <%- include('../views/partials/head') %>
+  <%- include('../views/partials/head', { page: 'Log in' }) %>
   <body>
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
