login form added to login.ejs

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,27 @@
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
     <h1>Login Page</h1>
+    <div class="container">
+      <form action="/login" method="post">
+        <label for="email" class="form-label">Email</label>
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="youremail@email.com"
+          class="form-control"
+        />
+        <label for="password" class="form-label">Password</label>
+        <input
+          type="password"
+          name="password"
+          id="password"
+          placeholder="********"
+          class="form-control"
+        />
+        <button class="btn btn-success">Log in</button>
+      </form>
+    </div>
     <!-- footer section -->
     <%- include('../views/partials/footer') %>
   </body>
