separate controllers and routes for attractions

--- a/views/attraction.ejs
+++ b/views/attraction.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- Head section -->
-  <%- include('../views/partials/head',, { page: 'NYC Attraction' }) %>
+  <%- include('../views/partials/head', { page: 'NYC Attraction' }) %>
   <body>
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
