--- a/views/newAttraction.ejs
+++ b/views/newAttraction.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- Head section -->
-  <%- include('../views/partials/head', , { page: 'Add New Attractions' }) %>
+  <%- include('../views/partials/head', { page: 'Add New Attractions' }) %>
   <body>
     <!-- Navbar section -->
     <%- include('../views/partials/navbar') %>
